Rename jobs drilldown to operator production

--- a/templates/report/index.html
+++ b/templates/report/index.html
@@ -18,7 +18,7 @@
     {% include 'report/fc_ng_ratio.html' %}
     {% include 'report/defect_intelligence.html' %}
     {% include 'report/operator_reliability.html' %}
-    {% include 'report/jobs_drilldown.html' %}
+    {% include 'report/operator_production.html' %}
     {% include 'report/low_yield_assemblies.html' %}
     {% include 'report/capa_action_register.html' %}
     {% include 'report/appendix.html' %}
