--- a/templates/report/fc_ng_ratio.html
+++ b/templates/report/fc_ng_ratio.html
@@ -1,4 +1,5 @@
 <section class="report-section">
+    <p class="section-desc">Shows each model's false-call to NG part ratio.</p>
     <div class="chart-block">
         <img src="{{ fcNgRatioImg }}" alt="FC/NG Ratio">
         <div class="chart-summary">
