--- a/templates/report/fc_vs_ng_rate.html
+++ b/templates/report/fc_vs_ng_rate.html
@@ -1,4 +1,5 @@
 <section class="report-section">
+    <p class="section-desc">Compares false-call rates with NG rates to reveal correlation trends.</p>
     <div class="chart-block">
         <img src="{{ fcVsNgRateImg }}" alt="FC vs NG Rate">
         <div class="chart-summary">
