--- a/templates/report/operator_reject.html
+++ b/templates/report/operator_reject.html
@@ -1,4 +1,5 @@
 <section class="report-section">
+    <p class="section-desc">Summarizes operator reject rates for the reporting period.</p>
     <div class="chart-block">
         <img src="{{ operatorRejectImg }}" alt="Operator Reject">
         <div class="chart-summary">
