--- a/static/css/report.css
+++ b/static/css/report.css
@@ -1,5 +1,6 @@
 @page {
-    margin: 0;
+    margin: 10px;
+    background: var(--surface-alt);
 }
 
 /* Color system */
@@ -31,7 +32,7 @@ body {
 header {
     display: flex;
     align-items: center;
-    background-color: var(--muted);
+    background-color: var(--surface-alt);
     padding: 10px;
 }
 
