--- a/templates/report/fc_ng_ratio.html
+++ b/templates/report/fc_ng_ratio.html
@@ -3,8 +3,8 @@
     <div class="chart-block">
         <img src="{{ fcNgRatioImg }}" alt="FC/NG Ratio">
         <div class="chart-summary">
-            <p>Date range: {{ start }} - {{ end }}
-Top ratios: {% if fcNgRatioSummary.top %}{% for t in fcNgRatioSummary.top %}{{ t.name }} ({{ '%.2f'|format(t.ratio) }}){% if not loop.last %}, {% endif %}{% endfor %}{% else %}None{% endif %}</p>
+            <p><strong>Date range:</strong> {{ start }} - {{ end }}<br>
+<strong>Top ratios:</strong> {% if fcNgRatioSummary.top %}{% for t in fcNgRatioSummary.top %}{{ t.name }} ({{ '%.2f'|format(t.ratio) }}){% if not loop.last %}, {% endif %}{% endfor %}{% else %}None{% endif %}</p>
             <table id="fcNgRatioTable" class="data-table">
                 <thead><tr><th>Model</th><th>FalseCall Parts</th><th>NG Parts</th><th>FC/NG Ratio</th></tr></thead>
                 <tbody>
