--- a/templates/report/operator_reject.html
+++ b/templates/report/operator_reject.html
@@ -3,11 +3,11 @@
     <div class="chart-block">
         <img src="{{ operatorRejectImg }}" alt="Operator Reject">
         <div class="chart-summary">
-            <p>Date range: {{ start }} - {{ end }}
-Total boards: {{ operatorSummary.totalBoards }}
-Average reject rate: {{ operatorSummary.avgRate|round(2) }}%
-Min reject rate: {{ operatorSummary.min.name or 'N/A' }} ({{ operatorSummary.min.rate|round(2) }}%)
-Max reject rate: {{ operatorSummary.max.name or 'N/A' }} ({{ operatorSummary.max.rate|round(2) }}%)</p>
+            <p><strong>Date range:</strong> {{ start }} - {{ end }}<br>
+<strong>Total boards:</strong> {{ operatorSummary.totalBoards }}<br>
+<strong>Average reject rate:</strong> {{ operatorSummary.avgRate|round(2) }}%<br>
+<strong>Min reject rate:</strong> {{ operatorSummary.min.name or 'N/A' }} ({{ operatorSummary.min.rate|round(2) }}%)<br>
+<strong>Max reject rate:</strong> {{ operatorSummary.max.name or 'N/A' }} ({{ operatorSummary.max.rate|round(2) }}%)</p>
             <table class="data-table">
                 <thead>
                     <tr><th>Operator</th><th>Inspected</th><th>Rejected</th><th>Reject %</th></tr>
