--- a/templates/report/yield_trend.html
+++ b/templates/report/yield_trend.html
@@ -3,10 +3,10 @@
     <div class="chart-block">
         <img src="{{ yieldTrendImg }}" alt="Yield Trend">
         <div class="chart-summary">
-            <p>Date range: {{ start }} - {{ end }}
-Average yield: {{ yieldSummary.avg|round(1) }}%
-Lowest yield date: {{ yieldSummary.worstDay.date or 'N/A' }} ({{ yieldSummary.worstDay.yield|round(1) }}%)
-Worst assembly: {{ yieldSummary.worstAssembly.assembly or 'N/A' }} ({{ yieldSummary.worstAssembly.yield|round(1) }}%)</p>
+            <p><strong>Date range:</strong> {{ start }} - {{ end }}<br>
+<strong>Average yield:</strong> {{ yieldSummary.avg|round(1) }}%<br>
+<strong>Lowest yield date:</strong> {{ yieldSummary.worstDay.date or 'N/A' }} ({{ yieldSummary.worstDay.yield|round(1) }}%)<br>
+<strong>Worst assembly:</strong> {{ yieldSummary.worstAssembly.assembly or 'N/A' }} ({{ yieldSummary.worstAssembly.yield|round(1) }}%)</p>
             <table class="data-table">
                 <tbody>
                 {% for d, y in yield_pairs %}
